finished update loops